<resources>
    <string name="app_name">RoomDB_Demo</string>
    <string name="add_device">Add Device</string>
    <string name="save">Save</string>
    <string name="device_name">Device name</string>
    <string name="enter_device_name">Enter device name</string>
    <string name="device_description">Device description</string>
    <string name="enter_device_description">Enter device description</string>
    <string name="no_device_available">No Device Available</string>
</resources>