<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_background"
    android:padding="@dimen/_23sdp">


    <View
        android:id="@+id/view3"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_3sdp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_23sdp"
        app:layout_constraintTop_toBottomOf="@+id/view3">

        <TextView
            android:id="@+id/record_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:text="@string/add_device"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/save_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/save"
            android:textColor="#2E85D0"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_31sdp"
        android:includeFontPadding="false"
        android:text="@string/device_name"
        android:textColor="@color/text_color"
        android:textDirection="locale"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_title" />

    <EditText
        android:id="@+id/et_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bottom_sheet_edit_text_background"
        android:hint="@string/enter_device_name"
        android:imeOptions="actionDone"
        android:padding="@dimen/_15sdp"
        android:inputType="text"
        android:paddingVertical="@dimen/_1sdp"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_hint_color"
        android:textDirection="locale"
        android:textSize="@dimen/_12ssp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_device_name" />

    <TextView
        android:id="@+id/tv_device_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:includeFontPadding="false"
        android:text="@string/device_description"
        android:textColor="@color/text_color"
        android:textDirection="locale"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_device_name" />

    <EditText
        android:id="@+id/et_device_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bottom_sheet_edit_text_background"
        android:hint="@string/enter_device_description"
        android:imeOptions="actionDone"
        android:padding="@dimen/_15sdp"
        android:inputType="text"
        android:paddingVertical="@dimen/_1sdp"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_hint_color"
        android:textDirection="locale"
        android:textSize="@dimen/_12ssp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_device_description" />

</androidx.constraintlayout.widget.ConstraintLayout>